--- a/dsc badge gen/style.css
+++ b/dsc badge gen/style.css
@@ -176,8 +176,8 @@ canvas {
 }
 @media screen and (max-width: 860px) {
     header {
-      height: 65px;
-      font-size: 12px;
+      height: 56px;
+      font-size: 20px;
     }
     .main-container {
       flex-direction: column;
@@ -197,5 +197,11 @@ canvas {
     .download-fab {
       width: 56px;
       height: 56px;
+    }
+    .title {
+        font-size: 1.5rem;
+    }
+    .input label {
+        font-size: 1rem;
     }
 }
